# fpl-momentum-tracker

./: .gitignore  ANALYSIS_IMPROVEMENTS.md  Justfile  README.md  pyproject.toml
scripts/: check_analysis.py  inspect_data.py  test_analysis.py
src/: app.py
src/data/: gameweek_history.parquet  momentum_analysis.parquet  players.parquet
src/scripts/: analyze_momentum.py  fetch_data.py  report_forwards.py
tests/: conftest.py  test_analyze_momentum.py  test_fetch_data.py
