[project]
name = "fpl-momentum-tracker"
version = "0.2.0"
description = "FPL xG Momentum Tracker: Identify underperforming gems and overperforming traps using rolling xG analysis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "httpx>=0.28.1",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
    "pydantic>=2.12.5",
    "scipy>=1.17.0",
    "st-annotated-text>=4.0.2",
    "streamlit>=1.53.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
